Do not crash if the system configuration cache (syscoca) is corrupt and the user launched to the preferences window.

BUG: 310653
FIXED-IN: 4.9.5
REVIEW: 107642